monitoring/blackbox-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: blackbox-exporter
  name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: blackbox-exporter
  template:
    metadata:
      labels:
        io.kompose.service: blackbox-exporter
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^v[0-9]+\.[0-9]+\.[0-9]+$'
    spec:
      containers:
        - image: prom/blackbox-exporter:v0.29.0
          name: blackbox-exporter
          args:
            - "--config.file=/etc/blackbox_exporter/blackbox.yml"
          ports:
            - containerPort: 9115
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/blackbox_exporter
              name: blackbox-exporter-config
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: blackbox-exporter-config
          configMap:
            name: blackbox-exporter-config
