monitoring/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o .
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o .
        kompose.version: 1.35.0 (HEAD)
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^[0-9]+\.[0-9]+\.[0-9]+$'
      labels:
        io.kompose.service: otel-collector
    spec:
      containers:
        - args:
            - --config=/etc/otel-collector-config.yaml
          image: otel/opentelemetry-collector-contrib:0.162.0
          name: otel-collector
          ports:
            - containerPort: 4318
              protocol: TCP
            - containerPort: 8888
              protocol: TCP
            - containerPort: 8889
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/otel-collector-config.yaml
              name: otel-collector-config
              subPath: otel-collector-config.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: otel-collector-config.yaml
                path: otel-collector-config.yaml
            name: otel-collector-config
          name: otel-collector-config
