monitoring/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o .
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o .
        kompose.version: 1.35.0 (HEAD)
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^v[0-9]+\.[0-9]+\.[0-9]+$'
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - image: prom/prometheus:v3.15.0
          name: prometheus
          args:
            # Defaults from Dockerfile CMD
            # https://github.com/prometheus/prometheus/blob/main/Dockerfile
            # NOTE: Make sure these stays in sync when upgrading.
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            # Ones I added:
            # Increase metric retention time from default 15 days
            - "--storage.tsdb.retention.time=31d"
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
              subPath: prometheus.yml
              readOnly: true
            - mountPath: /prometheus
              name: prometheus-data
      restartPolicy: Always
      serviceAccountName: prometheus
      volumes:
        - name: prometheus-config
          secret:
            secretName: prometheus-config
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data-lh
