monitoring/pushgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pushgateway
  name: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pushgateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: pushgateway
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^v[0-9]+\.[0-9]+\.[0-9]+$'
    spec:
      containers:
        - image: prom/pushgateway:v1.11.4
          name: pushgateway
          ports:
            - containerPort: 9091
              protocol: TCP
      restartPolicy: Always
