monitoring/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.sort_tags: "semver"
        diun.max_tags: "2"
        diun.include_tags: '^[0-9]+\.[0-9]+\.[0-9]+$'
      labels:
        io.kompose.service: tempo
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        # https://github.com/grafana/tempo/releases
        - image: grafana/tempo:3.1.0
          name: tempo
          args:
            - -config.file=/etc/tempo-config.yaml
          ports:
            - containerPort: 3200
              protocol: TCP
            - containerPort: 4418
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/tempo-config.yaml
              name: tempo-config
              subPath: tempo-config.yaml
            - mountPath: /tmp/tempo
              name: tempo-data
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: tempo-config.yaml
                path: tempo-config.yaml
            name: tempo-config
          name: tempo-config
        - name: tempo-data
          persistentVolumeClaim:
            claimName: tempo-data-lh
