monitoring/blackbox-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: blackbox-exporter
  name: blackbox-exporter
spec:
  ports:
    - name: "9115"
      port: 9115
      targetPort: 9115
  selector:
    io.kompose.service: blackbox-exporter
