monitoring/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o .
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "4318"
      port: 4318
      targetPort: 4318
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: "8889"
      port: 8889
      targetPort: 8889
  selector:
    io.kompose.service: otel-collector
