monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o .
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  type: LoadBalancer
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
