monitoring/pushgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
spec:
  rules:
  - host: pushgateway.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pushgateway
            port:
              number: 9091
